--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   # Local cache
   shared_preferences: ^2.0.15
 
+  # ui component
+  flutter_slidable: ^2.0.0
+
 
 dev_dependencies:
   flutter_test:
